--- a/MyFit v.1/MyFit/Base.lproj/Main.storyboard
+++ b/MyFit v.1/MyFit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="4C1-Lj-hi2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="4C1-Lj-hi2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -189,56 +189,6 @@
             </objects>
             <point key="canvasLocation" x="388" y="2175"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="iqf-bW-Ync">
-            <objects>
-                <viewController id="dou-uy-9Y1" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="1Gy-QC-YXn"/>
-                        <viewControllerLayoutGuide type="bottom" id="6A0-8x-vIx"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="wwB-0B-Kbd">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Mi-If-1cx">
-                                <rect key="frame" x="0.0" y="7" width="414" height="44"/>
-                                <animations/>
-                                <items>
-                                    <navigationItem title="BMI" id="GzC-Dm-3Yq"/>
-                                </items>
-                            </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FvX-QU-ZnW">
-                                <rect key="frame" x="184" y="225" width="30" height="30"/>
-                                <animations/>
-                                <state key="normal" title="BMI">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="Qff-rq-YF3" kind="show" id="iSM-5n-zOM"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1mu-wE-mmC">
-                                <rect key="frame" x="184" y="336" width="34" height="30"/>
-                                <animations/>
-                                <state key="normal" title="WTH">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="AMa-QX-Ak2" kind="show" id="t5u-b5-Fye"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="ccI-fs-ITa"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tpc-OI-SfQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2338" y="1323"/>
-        </scene>
         <!--Calculator-->
         <scene sceneID="B9P-KA-uoZ">
             <objects>
@@ -287,7 +237,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ML1-oz-Vla">
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="150" minValue="0.0" maxValue="300" translatesAutoresizingMaskIntoConstraints="NO" id="ML1-oz-Vla">
                                 <rect key="frame" x="142" y="257" width="118" height="31"/>
                                 <animations/>
                                 <connections>
@@ -340,7 +290,7 @@
                     <connections>
                         <outlet property="genderControl" destination="V1e-Cb-YhH" id="IEU-Go-nuo"/>
                         <outlet property="heightTextField" destination="Hk8-ai-iUJ" id="JcX-tt-faW"/>
-                        <outlet property="motionsegue" destination="6LJ-TE-76s" id="vAv-39-TPt"/>
+                        <outlet property="motionsegue" destination="6LJ-TE-76s" id="0li-bk-ERq"/>
                         <outlet property="weightLabel" destination="cqT-ww-CMB" id="5h0-cb-wFC"/>
                         <outlet property="weightSlider" destination="ML1-oz-Vla" id="fWl-Li-yqV"/>
                     </connections>
@@ -485,7 +435,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p8R-W0-gcm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1086" y="2168"/>
+            <point key="canvasLocation" x="1816" y="2245"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Dw4-Wn-mSL">
@@ -542,12 +492,48 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="dou-uy-9Y1" kind="relationship" relationship="rootViewController" id="iqJ-HF-peK"/>
+                        <segue destination="hm9-F9-Ope" kind="relationship" relationship="rootViewController" id="uRx-GB-Q4f"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bc1-SI-uKh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1712" y="1323"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="3DX-tq-JCi">
+            <objects>
+                <viewController id="hm9-F9-Ope" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ozl-uZ-zlu"/>
+                        <viewControllerLayoutGuide type="bottom" id="5Xc-38-bZl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9C2-g0-Sbo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e9q-BB-r0I">
+                                <rect key="frame" x="277" y="285" width="30" height="30"/>
+                                <state key="normal" title="BMI">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Qff-rq-YF3" kind="show" id="ESd-An-X3p"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gMf-Fa-XJL">
+                                <rect key="frame" x="275" y="380" width="34" height="30"/>
+                                <state key="normal" title="WTH">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="UX1-oG-O1A"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VNv-HV-663" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2373" y="1255"/>
         </scene>
         <!--Calander-->
         <scene sceneID="LgX-H9-kJX">
