--- a/MyFit v.1/MyFit/Base.lproj/LaunchScreen.xib
+++ b/MyFit v.1/MyFit/Base.lproj/LaunchScreen.xib
@@ -10,8 +10,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="7Mr-si-iZU">
-                    <rect key="frame" x="0.0" y="0.0" width="381" height="667"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="yHv-iL-RcR">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="622"/>
                     <animations/>
                 </imageView>
             </subviews>
